<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_record"
        android:icon="@drawable/ic_action_video"
        android:showAsAction="ifRoom"
        android:title="@string/action_record"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="ifRoom"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_label"
        android:icon="@drawable/ic_action_new_label"
        android:showAsAction="ifRoom"
        android:title="@string/action_label"/>
    <item
        android:id="@+id/action_play"
        android:icon="@drawable/ic_action_play"
        android:showAsAction="ifRoom"
        android:title="@string/action_play"/>

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>